trying to fix gap between the titles

--- a/rhododendron/styles.css
+++ b/rhododendron/styles.css
@@ -36,6 +36,8 @@ ul {
     align-items: center;
     margin-top: 10px;
     margin-bottom: 10px;
+    margin: 10px 0;
+    line-height: 1;
 }
 
 img {
